--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
         <div class="container ">
             <div class = "d-flex flex-column min-vh-100 justify-content-center align-items-center">
                 
-                <h1 class = "my-5">Get your <span class="text-success">Spotify</span> stats and understand the type of music you like</h1>
+                <h1 class = "message my-5">Get your <span class="text-success">Spotify</span> stats and understand the type of music you like</h1>
                 <button id="log-in" type="button" class="btn btn-success rounded-pill p-3">Log Into Spotify</button>
                 
             </div>
@@ -21,7 +21,10 @@
     </section>
 
 
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.7.1/gsap.min.js" integrity="sha512-UxP+UhJaGRWuMG2YC6LPWYpFQnsSgnor0VUF3BHdD83PS/pOpN+FYbZmrYN+ISX8jnvgVUciqP/fILOXDjZSwg==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.7.1/ScrollTrigger.min.js" integrity="sha512-DlTk2PLUinhBupE89kHOJTt11QqbRMQVlbb26XVDvp4D1kt0fRvQJslvZnTelRJHq6yK0tIPCR7cul8+9Blz0g==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.1/dist/js/bootstrap.bundle.min.js" integrity="sha384-/bQdsTh/da6pkI1MST/rWKFNjaCP5gBSY4sEBT38Q/9RBh9AH40zEOg7Hlq2THRZ" crossorigin="anonymous"></script>
     <script src="js\send.js"></script>
+    <script src="js\animations-index.js"></script>
 </body>
 </html>
