--- a/stats.html
+++ b/stats.html
@@ -9,11 +9,34 @@
     <title>Spotify Stats</title>
 </head>
 <body class="bg-dark">
+    <nav class="navbar navbar-expand-lg bg-dark navbar-dark py-2 fixed-top">
+        <div class="container">
+          <h2 class="navbar-brand fs-3"><span class = "text-success">Spotify Stats</span></h2>
+          <button
+            class="navbar-toggler"
+            type="button"
+            data-bs-toggle="collapse"
+            data-bs-target="#navmenu"
+          >
+            <span class="navbar-toggler-icon"></span>
+          </button>
+          <div class="collapse navbar-collapse" id="navmenu">
+            <ul class="navbar-nav ms-auto">
+              <li class="nav-item">
+                <a href="https://github.com/patrickmcalinden/spotfiy-stats" class="nav-link">Source Code</a>
+              </li>
+              <li class="nav-item">
+                <a href="https://www.spotify.com/us/account/apps/" class="nav-link">Sign Out</a>
+              </li>
+            </ul>
+          </div>
+        </div>
+      </nav>
     <section class= "bg-dark text-light text-center min-vh-100 justify-content-center ">
         <div class="container">
             <div class="d-flex flex-column min-vh-100 justify-content-center align-items-center">
-                <h1 class = 'my-2'>Hey <span class="text-success" id= "username"></span>,</h1>
-                <p>Scroll down to see your top artists and tracks!</p>
+                <h1 class = 'greeting my-2 display-2'><span class='first'>Hey</span> <span class=" greeting-name greeting-name text-success" id= "username"></span><span class="comma">,</span> </h1>
+                <p class ='scroll-down-message fs-4'><span class="scroll-down-indicator">Scroll down</span> to see your top artists and tracks!</p>
             </div>
         </div>
     </section>
@@ -90,7 +113,9 @@
 
     </section>
 
-
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.7.1/gsap.min.js" integrity="sha512-UxP+UhJaGRWuMG2YC6LPWYpFQnsSgnor0VUF3BHdD83PS/pOpN+FYbZmrYN+ISX8jnvgVUciqP/fILOXDjZSwg==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.7.1/ScrollTrigger.min.js" integrity="sha512-DlTk2PLUinhBupE89kHOJTt11QqbRMQVlbb26XVDvp4D1kt0fRvQJslvZnTelRJHq6yK0tIPCR7cul8+9Blz0g==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
+    <script src ="js\animations-stats.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.1/dist/js/bootstrap.bundle.min.js" integrity="sha384-/bQdsTh/da6pkI1MST/rWKFNjaCP5gBSY4sEBT38Q/9RBh9AH40zEOg7Hlq2THRZ" crossorigin="anonymous"></script>
     <script src="js\load.js"></script>
 </body>
