--- a/stats.html
+++ b/stats.html
@@ -42,9 +42,9 @@
     </section>
     
     <section class="text-center"></section>
-        <div class=" flex-content gap-5 text-light container d-flex flex-column justify-content-center align-items-center text-center">
-            <h1 class= 'picture mb-2 text-center text-light'>Artist of The <span class = "text-success">Month!</span></h1>
-            <div class="artist-month">
+        <div class="flex-content gap-5 text-light container d-flex flex-column justify-content-center align-items-center text-center">
+            <h1 class= 'content1 picture mb-2 text-center text-light'>Artist of The <span class = "text-success">Month!</span></h1>
+            <div class=" content1 artist-month">
                 <a  class = "click " href="">
                     <div class="card-start mb-5">
                             <img id="artist-picture-month"src="" alt="">
@@ -53,8 +53,8 @@
                     </div>
                 </a>
             </div>
-            <h1 class= 'title text-center my-2'>Artist of the <span class = "text-success">Half-Year!</span></h1>
-            <div class="artist-sixmonth">
+            <h1 class= 'content2 title text-center my-2'>Artist of the <span class = "text-success">Half-Year!</span></h1>
+            <div class=" content2 artist-sixmonth">
                 <a class = 'click' href="">
                     <div class="card-start mb-5">
                         <img id="artist-picture-6month"src="" alt="">
@@ -64,8 +64,8 @@
                 </a>
     
             </div>
-            <h1 class= 'title text-center picture my-4' >Artist of the <span class = "text-success">Year!</span></h1>
-            <div class="artist-year">
+            <h1 class= ' content3 title text-center picture my-4' >Artist of the <span class = "text-success">Year!</span></h1>
+            <div class=" content3 artist-year">
                 <a class = "click" href="">
                     <div class="card-start mb-5">
                         <img id="artist-picture-year"src="" alt="">
@@ -75,8 +75,8 @@
                 </a>
             </div>
 
-            <h1 class= "title my-4">Track of The <span class = "text-success">Month!</span></h1>
-            <div class="track-month">
+            <h1 class= "content4 title my-4">Track of The <span class = "text-success">Month!</span></h1>
+            <div class=" content4 track-month">
                 <a class = "click" href="">
                     <div class="card-track mb-5">
                         <img id="track-picture-month"src="" alt="">
@@ -85,8 +85,8 @@
                     </div>
                 </a>
             </div>
-            <h1 class= "title my-4">Top Track of the <span class = "text-success">Half-Year!</span></h1>
-            <div class="track-sixmonth">
+            <h1 class= "content5 title my-4">Top Track of the <span class = "text-success">Half-Year!</span></h1>
+            <div class="content5 track-sixmonth">
                 <a class = "click" href="">
                     <div class="card-track mb-5">
                         <img id="track-picture-6month"src="" alt="">
@@ -97,8 +97,8 @@
 
                 </a>
             </div>
-            <h1 class= "my-4">Track of the<span class = "text-success"> Year!</span></h1>    
-            <div class="track-year">
+            <h1 class= " content6 my-4">Track of the<span class = "text-success"> Year!</span></h1>    
+            <div class="content6 track-year">
                 <a class ="click" href="">
                     <div class="card-track mb-5">
                         <img id="track-picture-year"src="" alt="">
